# MIL-ton

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  update-deps.yml
configs/: example.yaml
mil_ton/: __init__.py  cli.py  config.py
mil_ton/data/: __init__.py  ingestion.py
mil_ton/inference/: __init__.py  interpret.py  predict.py
mil_ton/models/: __init__.py  mil_model.py  scvi_model.py
mil_ton/models/tcr/: __init__.py  dataset.py  encoder.py  model.py
mil_ton/training/: __init__.py  dataset.py  tcr_trainer.py  trainer.py
tests/: conftest.py  test_config.py  test_dataset.py  test_ingestion.py  test_model.py  test_scvi_model.py  test_tcr_model.py  test_trainer.py
