[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mil-ton"
version = "0.1.0"
description = "Donor-level prediction pipeline for single-cell RNA-seq data using Multiple Instance Learning"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
dependencies = [
    "anndata>=0.10",
    "scanpy>=1.9",
    "scvi-tools>=1.1",
    "torch>=2.0",
    "numpy>=1.24",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "typer>=0.9",
    "pyyaml>=6.0",
    "h5py>=3.9",
    "scipy>=1.11",
    "rich>=13.0",
    "torchmetrics>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
]

[project.scripts]
mil-predict = "mil_ton.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["mil_ton"]
