[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mil-ton"
version = "0.1.0"
description = "Donor-level prediction pipeline for single-cell RNA-seq data using Multiple Instance Learning"
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = { file = "LICENSE" }
dependencies = [
    # Core scientific stack – upper bounds prevent silent breakage from
    # major-version API changes while leaving room for patch releases.
    "anndata>=0.10,<1.0",
    "scanpy>=1.9,<2.0",
    "scvi-tools>=1.1,<2.0",
    "torch>=2.1,<3.0",
    "numpy>=1.24,<3.0",
    "pandas>=2.0,<3.0",
    "scikit-learn>=1.3,<2.0",
    "typer>=0.9,<1.0",
    "pyyaml>=6.0,<7.0",
    "h5py>=3.9,<4.0",
    "scipy>=1.11,<2.0",
    "rich>=13.0,<16.0",
    "torchmetrics>=1.0,<2.0",
    # BertTCR TCR submodule: BERT-based protein language model for TCR encoding.
    # See mil_ton/models/tcr/ and https://github.com/zhangbeibei-min/BertTCR
    "transformers>=4.30,<5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4,<9.1",
    "pytest-cov>=4.1,<6.0",
]

[project.scripts]
mil-predict = "mil_ton.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["mil_ton"]
